--- a/tasks-10/index.css
+++ b/tasks-10/index.css
@@ -1,28 +1,27 @@
 body {
     background-color: plum;
     display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
-#countdown {
+.hell {
     font-size: 48px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     /* To center vertically as well */
-    animation: countdownAnimation;
+    animation: hellAnimation;
 }
 
-@keyframes countdownAnimation {
+@keyframes hellAnimation {
     0% {
         transform: scale(1);
         opacity: 1;
     }
-
     100% {
         transform: scale(2);
         opacity: 0;
