--- a/tasks-10/index.css
+++ b/tasks-10/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: plum;
+    background-color: rgb(255, 0, 255);
     display: flex;
     justify-content: center;
     align-items: center;
